clusters/my-cluster/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-spanischlehrerdeutsch
  namespace: production
spec:
  selector:
    matchLabels:
      app: web-spanischlehrerdeutsch
  ports:
    - port 80
      targetPort: 80
